# SKL

./: CMakeLists.txt  README.md  change_name.py
cmake/: prohibit_in_source_build.cmake  setup_catch2.cmake  setup_flags.cmake  setup_kokkos.cmake  setup_kokkoskernels.cmake  setup_mpi.cmake  setup_trilinois.cmake  setup_yaml.cmake
env/: gpu-itp.sh
include/SKL/: SKL.h.in
include/SKL/mappings/: coordinate_mapping.hh  linear_mapping.hh
include/SKL/solvers/: gmres.hh  helpers.hh
include/SKL/utils/: device.h  inline.h  linalg.hh  types.hh
include/SKL/utils/blas/: SKL_blas_1.hh  SKL_blas_1_impl.hh  SKL_blas_2.hh  SKL_blas_3.hh
include/grace_id/: grace_id_config.h.in
include/grace_id/mappings/: coordinate_mapping.hh  linear_mapping.hh
include/grace_id/solvers/: gmres.hh  helpers.hh
include/grace_id/utils/: device.h  linalg.hh  types.hh
include/grace_id/utils/blas/: grace_blas_1.hh  grace_blas_1_impl.hh  grace_blas_2.hh  grace_blas_3.hh
test/: 1d_spectral_solver.cc  CMakeLists.txt  test_blas_implementation.cc  test_jvp.cc  test_sacado_functionality.cc  tets_kokkos_gmres_solver_1d.cc
test/main/: kokkos_tests_main.cc  mpi_tests_main.cc
